Line-height, overall functionality, and spacing corrections

--- a/assets/css/base/placeholders.sass
+++ b/assets/css/base/placeholders.sass
@@ -6,4 +6,17 @@
 
 
 %skill-color
-  background: $bgcolor  
+  background: $accent-red 
+
+%skill-color-op
+  background: $accent-red 
+  opacity: 0.3
+
+
+
+%sc-logo  
+  +size(50px)  
+  float: left
+  margin: 10px 0 0 30px
+  path
+    fill: #fff
