--- a/assets/css/modules/_about.sass
+++ b/assets/css/modules/_about.sass
@@ -1,11 +1,10 @@
 
-
-
 .face-lockup
-  max-width: 750px  
+  max-width: 800px  
   +display(flex)      
   // bourbon mixin, which turns your object into a flex box to easily arrange elements
   margin: 0 auto
+  padding: 0 40px     
   +align-items(center)   
   // this will align the items inside the block horizontally
   +justify-content(space-around)  
@@ -49,6 +48,7 @@
     display: block   
     // upon reaching 650 px in width the elements will reform vertically under each other
     text-align: center
+    padding: 0 40px     
 
     div
       display: inline-block
@@ -65,22 +65,34 @@
     [class^="icon-"]  
       margin: 10px  
 
+
+.about-me
+  font:
+    size: 14pt
+    weight: 700
+    color: $accent-dark
+  letter-spacing: 0.15em  
+    
+  
+
 .about-text
-  max-width: 700px
-  padding: 0 15px     
+  max-width: 750px
+  padding: 0 40px     
   /* put at least 10 px padding so that the text does not touch the sides of the phone */
-  margin: 50px auto 50px
-  text-align: center
-  letter-spacing: 0.015em
+  margin: 60px auto
+  text-align: justify
+  letter-spacing: 0.06em
   font-size: 14pt
   font-weight: 300
-
+  line-height: 1.5em
+  color: $accent-dark
 
 
 
 .skill-lockup  
   max-width: 600px
   margin: 120px auto
+  padding: 0 40px
   +clearfix
 
   .skill-label
@@ -101,14 +113,14 @@
     span
       display: inline-block
       +size(14px)
-      background-color: $accent-red
+      @extend %skill-color
       margin-right: 5px
       border-radius: 50%
 
 
     @for $i from 1 through 10
       &.skill-#{$i} span:nth-child(n+#{$i+1})
-        @extend %skill-color
+        @extend %skill-color-op
 
         // go to sass-lang.com to get this 'for' loop. What this does is it creates a new selector everytime we run it. The first line says: "It starts with 1 and follows through 10, and everytime it goes through the loop, the placeholder(i) will be replaced with a number of 1 through 10". Th second line says: On the first iteration it will output 1, and its child will be n+1. So the first iteration will be skill-1.
 
