--- a/assets/css/modules/_header.sass
+++ b/assets/css/modules/_header.sass
@@ -1,18 +1,12 @@
 
 header
-  height: 650px
+  height: 600px
   background: url(../img/109H.jpg) center center
-  background-size: cover   
-  // to stretch the bg to cover the screen
+  background-size: cover   // to stretch the bg to cover the screen
   
 
   .logo
-    +size(50px)  
-    // this is a bourbon mixin for logo placement
-    float: left
-    margin: 10px 0 0 30px
-    path
-      fill: #fff
+    @extend %sc-logo
 
   nav
     float: right
@@ -23,8 +17,7 @@ header
       margin-left: 20px
 
       color: rgba(0,0,0,0.4)
-      @extend %small-bold   
-      // placeholders.sass has the full code
+      @extend %small-bold   // placeholders.sass has the full code
 
       &:hover
         color: #fgfgfg
@@ -35,31 +28,36 @@ header
   h1
     text-align: center
     font:
-      size: 60px
+      size: 76px
       weight: 700
     color: white
-    text-transform: uppercase  
-    letter-spacing: 0.1em
-    margin-bottom: 40px
+
+    margin: 0 40px 40px 40px
     clear: both               
     //  never forget to use clear:both!
-    padding-top: 170px
-      
+    padding-top: 190px
 
+    @media screen and (max-width: 600px)
+      margin: 0 20px 40px 20px
+      font:
+        size: 55px
+        weight: 700
 
-    span
-      display: inline-block
-      padding: 0.2em 0.2em
-      border: white solid 10px
+    @media screen and (max-width: 490px)
+      margin: 0 20px 40px 20px
+      font:
+        size: 40px
+        weight: 700    
+
 
   .kicker
     text-align: center
     color: white
     font:
       size: 14pt
-      weight: 700
+      weight: 300
     text-transform: uppercase
-    letter-spacing: 0.08em
+    letter-spacing: 0.09em
 
 
   
